== HEAD

 * Add a closed option in state. This option define if a state define a ticket
   closed or not it's use in milestone
 * Add a administration of State. You see all state and you can add some new
 * Add converter Redmine to Oupsnow in a thor task
 * Add milestone for each project
 * Add a list of User in admin part
 * Define a global admin user by user. This global admin can be made
   everything. Oupsnow administration and project settings
 * Define a project admin by function. A user with this function can be update
   settting about project. Not other project and administration of Oupsnow

== 2009-01-21

 * Initial release