@@ -27,3 +27,5 @@ dependency "dm-sweatshop", dm_gems_version
 dependency "dm-tags", dm_gems_version
 dependency "dm-constraints", dm_gems_version
 dependency "dm-serializer", dm_gems_version
+
+dependency "RedCloth", "3.0.4",  :require_as => 'redcloth'
